--- a/0x09-web_infrastructure_design/AUTHORS
+++ b/0x09-web_infrastructure_design/AUTHORS
@@ -1,3 +1,3 @@
 # This file lists users who have contributed to this repository
 
-Nyong Mercy <nyongmercy@gmail.com>
+Edem Ukoh <edemukohassociates@outlook.com>
